I finally decided the nav will slide in from top to bottom, and overflow issue gone, hurray.☺️🤩

--- a/index.scss
+++ b/index.scss
@@ -49,14 +49,12 @@ section {
 // ======================================================
 
 body {
-  max-width: 100vw;
   overflow-x: hidden;
   background: $gray-300;
 }
 
 .wrapper {
   width: 100%;
-  overflow-x: hidden;
 
   // ======================================================
   //  HEADER
@@ -74,8 +72,11 @@ body {
       align-items: center;
       justify-content: space-between;
 
+      width: 100%;
       max-width: 1920px;
       margin: auto;
+
+      overflow: hidden;
 
       color: $white;
 
@@ -113,13 +114,13 @@ body {
           flex: 5;
         }
         @media only screen and (max-width: 850px) {
-          transition: right 0.3s ease-in-out;
+          transition: top 0.5s ease-in-out;
           flex-direction: column;
 
           position: absolute;
           width: 100%;
-          right: -100%;
-          top: 0;
+          right: 0;
+          top: -900%;
 
           padding: 10rem 1rem 5rem;
 
@@ -128,7 +129,7 @@ body {
           background: $gray-800;
 
           &.open {
-            right: 0;
+            top: 0;
           }
         }
 
